--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -3,7 +3,8 @@
   <%= link_to book_path(book.id) do %>
     <%= book.title %>
   <%end%>
-  <p>投稿ユーザー画像：<%= image_tag 'sample-author1.jpg' %></p>
+  
+  <p>投稿ユーザー画像：<%= image_tag book.user.get_profile_image(100,100) % %></p>
   <p>name：<%= book.user.name %></p>
   <p>opinion：<%= book.body %></p>
   <% if @book.user == current_user %>
