--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,7 +1,7 @@
 <div>
   <p>投稿ユーザー画像：<%= image_tag @book.user.get_profile_image(100,100) %></p>
   <p>name：<%= @book.user.name %></p>
-  <p>title：<%= book.title %></p>
+  <p>title：<%= @book.title %></p>
   <p>opinion：<%= @book.body %></p>
   <% if @book.user == current_user %>
     <%= link_to "削除", book_path(@book), method: :delete %>
