--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
@@ -14,10 +14,10 @@
     <header>
       <% if user_signed_in? %>
        <li>
-         <%= link_to 'Books', new_book_path %>
+         <%= link_to 'Homes', new_book_path %>
        </li>
        <li>
-          <%= link_to 'Users', user_path(current_user.id) %>
+          <%= link_to 'Users', users_path %>
        </li>
        <li>
          <%= link_to "Log out", destroy_user_session_path, method: :delete %>
