--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,14 +1,55 @@
-<% @books.each do |book| %>
-<div>
-  <%= link_to book_path(book.id) do %>
-    <%= book.title %>
-  <%end%>
-  
-  <p>投稿ユーザー画像：<%= image_tag book.user.get_profile_image(100,100) %></p>
-  <p>name：<%= book.user.name %></p>
-  <p>opinion：<%= book.body %></p>
-  <% if @book.user == current_user %>
-    <%= link_to "Destroy", book_path(@book), method: :delete %>
-  <% end %>
-</div>
-<% end %>
+<!DOCTYPE html>
+<html class="fontawesome-i2svg-active fontawesome-i2svg-complete">
+    <head>
+        <link rel="stylesheet" media="all" data-turbolinks-track="reload">
+        <script src="https://kit.fontawesome.com/91859b3e97.js" crossorigin="anonymous"></script>
+        <style type="text/css"></style>
+        <title>Bookers2Ver2</title>
+        <meta name="csrf-param">
+        <meta name="csrf-token">
+        <meta name="viewport">
+    </head>
+    <body>
+      <header>
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <div class="container">
+                    <a class="navbar-brand"><span>Bookers2</span></a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                        <ul class="navbar-nav ml-auto">
+                            <li><a class="nav-link text-light">Home</a></li>
+                            <li><a class="nav-link text-light" href="/users">Users</a></li>
+                            <li><a class="nav-link text-light" href="/books">Books</a></li>
+                            <li><a class="nav-link text-light" href="/users/log out">Log out</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </header>
+        <main>
+            <p id="notice">Welcome! You have signed up successfully.</p>
+            <% @books.each do |book| %>
+            <div>
+              <%= link_to book_path(book.id) do %>
+              <%= book.title %>
+              <%end%>
+              <p>投稿ユーザー画像：<%= image_tag book.user.get_profile_image(100,100) %></p>
+              <p>name：<%= book.user.name %></p>
+              <p>opinion：<%= book.body %></p>
+              <% if @book.user == current_user %>
+              <%= link_to "Destroy", book_path(@book), method: :delete %>
+              <% end %>
+            </div>
+            <% end %>
+        </main>
+        <footer>
+          <div class="container mt-5">
+            <div class="row">
+                <div class="mx-auto"><p>CopyRight Infratop.inc</p></div>
+            </div>
+          </div>
+        </footer>
+    </body>
+</html>
