--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -19,10 +19,10 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavDropdown">
                         <ul class="navbar-nav ml-auto">
-                            <li><a class="navbar-nav ml-auto"></a></li>
-                            <li><a class="nav-link text-light" href="/home/about">"Home"</a></li>
-                            <li><a class="nav-link text-light" href="/users/sign up">"Sign up"</a></li>
-                            <li><a class="nav-link text-light" href="/users/sign in">"Sign in"</a></li>
+                            <li><a class="nav-link text-light">Home</a></li>
+                            <li><a class="nav-link text-light" href="/home/about">About</a></li>
+                            <li><a class="nav-link text-light" href="/users/sign up">Sign up</a></li>
+                            <li><a class="nav-link text-light" href="/users/sign in">Sign in</a></li>
                         </ul>
                     </div>
                 </div>
