--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,32 +1,36 @@
 <!DOCTYPE html>
+<html lang="ja">
 <html class="fontawesome-i2svg-active fontawesome-i2svg-complete">
     <head>
-        <link rel="stylesheet" media="all" data-turbolinks-track="reload">
+        <meta charset="UTF-8" />
+        <title>Bookers2Ver2</title>
+        <meta name="csrf-param" content="authenticity_token">
+        <meta name="csrf-token">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <script src="https://kit.fontawesome.com/91859b3e97.js" crossorigin="anonymous"></script>
         <style type="text/css"></style>
-        <title>Bookers2Ver2</title>
-        <meta name="csrf-param">
-        <meta name="csrf-token">
-        <meta name="viewport">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     </head>
     <body>
         <header>
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <div class="container">
-                    <a class="navbar-brand"><span>Bookers2</span></a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                        <ul class="navbar-nav ml-auto">
-                            <li><a class="nav-link text-light" href="/">Home</a></li>
-                            <li><a class="nav-link text-light" href="/home/about">About</a></li>
-                            <li><a class="nav-link text-light" href="/users/sign up">Sign up</a></li>
-                            <li><a class="nav-link text-light" href="/users/sign in">Sign in</a></li>
-                        </ul>
-                    </div>
+         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container">
+                <a class="navbar-brand" href="/">
+                    <span>Bookers</span>
+                </a>
+                <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav ml-auto">
+                        <li><a class="nav-link text-light" href="/users/:id"><i class="fa-solid fa-house"></i>Home</a></li>
+                        <li><a class="nav-link text-light" href="/homes/about"><i class="fa-solid fa-link"></i>About</a></li>
+                        <li><a class="nav-link text-light" href="/users/sign_up"><i class="fa-solid fa-user-plus"></i>Sign up</a></li>
+                        <li><a class="nav-link text-light" href="/users/sign_in"><i class="fa-solid fa-right-to-bracket"></i>Log in</a></li>
+                   </ul>
                 </div>
-            </nav>
+            </div>
+         </nav>
         </header>
         <main>
             <p id="notice"></p>
@@ -56,17 +60,22 @@
                                 <input type="submit" name="commit" value="Sign up" class="btn btn-sm btn-success" data-disable-with="Sign up">
                             </div>
                         </form>
-                        <a href="/users/sign in">Log in</a>
+                        <a href="/users/sign_in">Log in</a>
                     </div>
                 </div>
             </div>
         </main>
-        <footer>
-            <div class="container mt-5">
-                <div class="row">
-                    <div class="mx-auto"><p>CopyRight Infratop.inc</p></div>
+      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    </body>
+    <footer>
+        <div class="container mt-5">
+            <div class="row">
+                <div class="mx-auto">
+                    <p>CopyRight Infratop.inc</p>
                 </div>
             </div>
-        </footer>
-    </body>
+        </div>
+    </footer>
 </html>
