--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
+<html lang="ja">
 <html class="fontawesome-i2svg-active fontawesome-i2svg-complete">
     <head>
-        <link rel="stylesheet" media="all" data-turbolinks-track="reload">
+        <meta charset="UTF-8" />
+        <title>Bookers2Ver2</title>
+        <meta name="csrf-param" content="authenticity_token">
+        <meta name="csrf-token">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <script src="https://kit.fontawesome.com/91859b3e97.js" crossorigin="anonymous"></script>
         <style type="text/css"></style>
-        <title>Bookers2Ver2</title>
-        <meta name="csrf-param">
-        <meta name="csrf-token">
-        <meta name="viewport">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     </head>
     <body>
-      <header>
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <div class="container">
-                    <a class="navbar-brand"><span>Bookers2</span></a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                        <ul class="navbar-nav ml-auto">
-                            <li><a class="nav-link text-light">Home</a></li>
+      <<header>
+         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container">
+                <a class="navbar-brand" href="/">
+                    <span>Bookers</span>
+                </a>
+                <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav ml-auto">
+                            <li><a class="nav-link text-light" href="/users/:id">Home</a></li>
                             <li><a class="nav-link text-light" href="/users">Users</a></li>
                             <li><a class="nav-link text-light" href="/books">Books</a></li>
-                            <li><a class="nav-link text-light" href="/users/log out">Log out</a></li>
+                            <li><a class="nav-link text-light" href="/users/log_out">Log out</a></li>
                         </ul>
                     </div>
                 </div>
@@ -30,26 +34,35 @@
         </header>
         <main>
             <p id="notice">Welcome! You have signed up successfully.</p>
-            <% @books.each do |book| %>
             <div>
-              <%= link_to book_path(book.id) do %>
-              <%= book.title %>
-              <%end%>
-              <p>投稿ユーザー画像：<%= image_tag book.user.get_profile_image(100,100) %></p>
-              <p>name：<%= book.user.name %></p>
-              <p>opinion：<%= book.body %></p>
-              <% if @book.user == current_user %>
-              <%= link_to "Destroy", book_path(@book), method: :delete %>
-              <% end %>
+            <% @books.each do |book| %>
+            <div class="container mt-5">
+                <div class="row">
+                  <div class="col-md-3">
+                    <%= link_to book_path(book.id) do %>
+                      <%= book.title %>
+                    <%end%>
+                    <h2>User info</h2>
+                    <p>投稿ユーザー画像：<%= image_tag book.user.get_profile_image(100,100) %></p>
+                    <p>name：<%= book.user.name %></p>
+                    <p>introduction：<%= book.body %></p>
+                    <% if @book.user == current_user %>
+                    <%= link_to "Destroy", book_path(@book), method: :delete %>
+                    <% end %>
+                  </div>
+                </div>
             </div>
             <% end %>
         </main>
-        <footer>
-          <div class="container mt-5">
-            <div class="row">
-                <div class="mx-auto"><p>CopyRight Infratop.inc</p></div>
-            </div>
+      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    </body>    
+    <footer>
+        <div class="container mt-5">
+          <div class="row">
+            <div class="mx-auto"><p>CopyRight Infratop.inc</p></div>
           </div>
-        </footer>
-    </body>
+        </div>
+    </footer>
 </html>
