--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,36 +1,13 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Bookers2</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
-    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
-
-  <body>
-    <header>
-      <% if user_signed_in? %>
-       <li>
-         <%= link_to 'Homes', new_book_path %>
-       </li>
-       <li>
-          <%= link_to 'Users', users_path %>
-       </li>
-       <li>
-         <%= link_to "Log out", destroy_user_session_path, method: :delete %>
-       </li>
-      <%else%>
-       <li>
-         <%= link_to "Sign up", new_user_registration_path %>
-       </li>
-       <li>
-         <%= link_to "Log in", new_user_session_path %>
-       </li>
-      <%end%>
-    </header>
-    <%= yield %>
-  </body>
+<html class="fontawesome-i2svg-active fontawesome-i2svg-complete">
+    <head>
+        <link rel="stylesheet" media="all" data-turbolinks-track="reload">
+        <script src="https://kit.fontawesome.com/91859b3e97.js" crossorigin="anonymous"></script>
+        <style type="text/css"></style>
+        <title>Bookers2Ver2</title>
+        <meta name="csrf-param" content="authenticity_token">
+        <meta name="csrf-token">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    </head>
+  <%= yield %>
 </html>
