--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -23,10 +23,10 @@
                 </button>
                 <div class="navbar-collapse collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav ml-auto">
-                            <li><a class="nav-link text-light" href="/users/:id">Home</a></li>
-                            <li><a class="nav-link text-light" href="/users">Users</a></li>
-                            <li><a class="nav-link text-light" href="/books">Books</a></li>
-                            <li><a class="nav-link text-light" href="/users/log_out">Log out</a></li>
+                            <li><a class="nav-link text-light" href="/users/:id"><i class="fa-solid fa-house"></i>Home</a></li>
+                            <li><a class="nav-link text-light" href="/users"><i class="fa-solid fa-users"></i>Users</a></li>
+                            <li><a class="nav-link text-light" href="/books"><i class="fa-solid fa-book-open"></i>Books</a></li>
+                            <li><a class="nav-link text-light" href="/users/log_out"><i class="fa-solid fa-right-from-bracket"></i>Log out</a></li>
                         </ul>
                     </div>
                 </div>
@@ -47,7 +47,7 @@
                     <p>name：<%= book.user.name %></p>
                     <p>introduction：<%= book.body %></p>
                     <% if @book.user == current_user %>
-                    <%= link_to "Destroy", book_path(@book), method: :delete %>
+                      <%= link_to "Destroy", book_path(@book), method: :delete %>
                     <% end %>
                   </div>
                 </div>
