--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html lang="ja">
 <html class="fontawesome-i2svg-active fontawesome-i2svg-complete">
     <head>
         <meta charset="UTF-8" />
@@ -12,8 +11,8 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     </head>
     <body>
-      <<header>
-         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <header>
+          <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
                 <a class="navbar-brand" href="/">
                     <span>Bookers</span>
@@ -23,36 +22,47 @@
                 </button>
                 <div class="navbar-collapse collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav ml-auto">
-                            <li><a class="nav-link text-light" href="/users/:id"><i class="fa-solid fa-house"></i>Home</a></li>
-                            <li><a class="nav-link text-light" href="/users"><i class="fa-solid fa-users"></i>Users</a></li>
-                            <li><a class="nav-link text-light" href="/books"><i class="fa-solid fa-book-open"></i>Books</a></li>
-                            <li><a class="nav-link text-light" href="/users/log_out"><i class="fa-solid fa-right-from-bracket"></i>Log out</a></li>
-                        </ul>
-                    </div>
+                    <li><a class="nav-link text-light" href="/"><i class="fa-solid fa-house"></i>Home</a></li>
+                    <li><a class="nav-link text-light" href="/users"><i class="fa-solid fa-users"></i>Users</a></li>
+                    <li><a class="nav-link text-light" href="/users/sign_up"><i class="fa-solid fa-user-plus"></i>Sign up</a></li>
+                    <li><a class="nav-link text-light" href="/users/log_in"><i class="fa-solid fa-right-to-bracket"></i>Log in</a></li>
+                  </ul>
                 </div>
-            </nav>
+            </div>
+          </nav>
         </header>
         <main>
             <p id="notice">Welcome! You have signed up successfully.</p>
-            <div>
-            <% @books.each do |book| %>
-            <div class="container mt-5">
+            <div class="container px-5 px-sm-0">
                 <div class="row">
-                  <div class="col-md-3">
-                    <%= link_to book_path(book.id) do %>
-                      <%= book.title %>
-                    <%end%>
                     <h2>User info</h2>
-                    <p>投稿ユーザー画像：<%= image_tag book.user.get_profile_image(100,100) %></p>
-                    <p>name：<%= book.user.name %></p>
-                    <p>introduction：<%= book.body %></p>
-                    <% if @book.user == current_user %>
-                      <%= link_to "Destroy", book_path(@book), method: :delete %>
+                    <table class="table">
+                        <tbody>
+                            <tr></tr>
+                            <tr></tr>
+                            <tr></tr>
+                        </tbody>
+                    </table>
+                    <div class="row">
+                    </div>
+                    <h2 class="mt-3">New book</h2>
+                    <% if @book.errors.any? %>
+                      <%= @book.errors.count %>errors prohibited this obj from being saved:
+                      <ul>
+                        <% @book.errors.full_messages.each do |message| %>
+                          <li><%= message %></li>
+                        <%end %>
+                      </ul>
                     <% end %>
-                  </div>
+                    <%= form_with model: @book do |f| %>
+                        <h4>Title</h4>
+                          <%= f.text_field :title %>
+                        <h4>Opinion</h4>
+                          <%= f.text_area :body %>
+                        <%= f.submit 'Create book' %>
+                    <% end %>
                 </div>
             </div>
-            <% end %>
         </main>
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
