--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -43,10 +43,11 @@
                         <p>about various books!</p>
                         <div class="btn-wrapper col-10 mx-auto">
                             <div class="row">
-                                <a class="btn btn-info btn-sm btn-block mb-3 sign_in" href="/users/sign_in">Log in</a>
+                              <a class="btn btn-info btn-sm btn-block mb-3 sign_in" href="/users/sign_in">Log in</a>
                             </div>
                             <div class="row">
-                                <a class="btn btn-success btn-sm btn-block sign_up" href="/users/sign_up">Sign up</a>
+                              <a class="btn btn-success btn-sm btn-block sign_up" href="/users/sign_up">Sign up</a>
+                              <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
                             </div>
                         </div>
                     </div>
