--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -21,8 +21,8 @@
                         <ul class="navbar-nav ml-auto">
                             <li><a class="nav-link text-light" href="/">Home</a></li>
                             <li><a class="nav-link text-light" href="/homes/about">About</a></li>
-                            <li><a class="nav-link text-light" href="/users/sign up">Sign up</a></li>
-                            <li><a class="nav-link text-light" href="/users/sign in">Sign in</a></li>
+                            <li><a class="nav-link text-light" href="/users/sign_up">Sign up</a></li>
+                            <li><a class="nav-link text-light" href="/users/sign_in">Sign in</a></li>
                         </ul>
                     </div>
                 </div>
