--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -23,10 +23,10 @@
                            </thead>
                            <tbody>
                              <tr>
-                               <th></th>
-                               <th><%= book.title %></th>
-                               <th><%= book.body %></th>
-                               <th colspan="3"></th>
+                               <td></td>
+                               <td><%= link_to "book.title", book_path(@book) %></td>
+                               <td><%= book.body %></td>
+                               <td colspan="3"></td>
                              </tr>
                            </tbody>
                          </table>
