--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -13,25 +13,25 @@
                      <% @books.each do |book| %>
                       <h2>Book detail</h2>
                          <table class="table table-hover table-inverse">
-                           <thead>
-                             <tr>
-                               <th></th>
-                               <th>Title<br>
-                               <th>Opinion</th>
-                               <th colspan="3"></th>
-                             </tr>
-                           </thead>
-                           <tbody>
-                             <tr>
-                               <td></td>
-                               <td><%= book.title %></td>
-                               <td><%= book.body %></td>
-                               <% if @user=current_user.id %>
-                                <td><%= link_to 'Edit', edit_book_path, class: "btn btn-sm btn-success" %></td>
-                                <td><%= link_to 'Destroy', method: :delete, class: "btn btn-sm btn-danger" %></td>
-                               <%end%>
-                             </tr>
-                           </tbody>
+                               <thead>
+                                 <tr>
+                                   <th></th>
+                                   <th>Title<br>
+                                   <th>Opinion</th>
+                                   <th colspan="3"></th>
+                                 </tr>
+                               </thead>
+                               <tbody>
+                                 <tr>
+                                   <td></td>
+                                   <td><%= link_to "book.title", book_path(@book) %></td>
+                                   <td><%= book.body %></td>
+                                   <% if @user=current_user.id %>
+                                    <td><%= link_to 'Edit', edit_book_path, class: "btn btn-sm btn-success" %></td>
+                                    <td><%= link_to 'Destroy', method: :delete, class: "btn btn-danger", "data-confirm" => "本当に消しますか？"%></td>
+                                   <%end%>
+                                 </tr>
+                               </tbody>
                          </table>
                      <%end%>
                     </div>
