--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,22 +13,22 @@
                      <% @books.each do |book| %>
                       <h2>Books</h2>
                          <table class="table table-hover table-inverse">
-                           <thead>
-                             <tr>
-                               <th></th>
-                               <th>Title<br>
-                               <th>Opinion</th>
-                               <th colspan="3"></th>
-                             </tr>
-                           </thead>
-                           <tbody>
-                             <tr>
-                               <th></th>
-                               <th><%= book.title %></th>
-                               <th><%= book.body %></th>
-                               <th colspan="3"></th>
-                             </tr>
-                           </tbody>
+                               <thead>
+                                 <tr>
+                                   <th></th>
+                                   <th>Title<br>
+                                   <th>Opinion</th>
+                                   <th colspan="3"></th>
+                                 </tr>
+                               </thead>
+                               <tbody>
+                                 <tr>
+                                   <td></td>
+                                   <td><%= link_to "book.title", book_path(@book) %></td>
+                                   <td><%= book.body %></td>
+                                   <td colspan="3"></td>
+                                 </tr>
+                               </tbody>
                          </table>
                      <%end%>
                   </div>
