--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,28 +25,36 @@
                     <ul class="navbar-nav ml-auto">
                     <% if user_signed_in? %>
                         <li>
+                          <i class="fa-solid fa-house"></i>
                           <%= link_to 'Home', user_path(current_user.id) %>
                         </li>
                         <li>
+                          <i class="fa-solid fa-users"></i>
                           <%= link_to 'Users', users_path %>    
                         </li>
                         <li>
+                          <i class="fa-solid fa-book-open"></i>
                           <%= link_to 'Books', books_path %>    
                         </li>
                         <li>
+                          <i class="fa-solid fa-right-from-bracket"></i>
                           <%= link_to "Log out", destroy_user_session_path, method: :delete %>
                         </li>
                     <% else %>
                         <li>
-                          <%= link_to 'Home', root_path %>
+                          <i class="fa-solid fa-house"></i>
+                          <%= link_to 'Home', new_user_session_path %>
                         </li>
                         <li>
+                          <i class="fa-solid fa-link"></i>
                           <%= link_to 'About', about_path %>    
                         </li>
                         <li>
+                          <i class="fa-solid fa-user-plus"></i>
                           <%= link_to "Sign up", new_user_registration_path %>
                         </li>
                         <li>
+                          <i class="fa-solid fa-right-to-bracket"></i>
                           <%= link_to "Log in", new_user_session_path %>
                         </li>
                     <% end %>
