--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -5,23 +5,25 @@
               <%= image_tag @user.get_profile_image(100,100) %>
               <table class="table table-striped">
                 <tbody>
-                    <tr><th>name</th><th><%= @user.name %></th></tr>
+                    <tr><th>name</th><th><%= user.name %></th></tr>
                     <tr><th>introduction</th><th></th></tr>
                 </tbody>
               </table>
-              <% if @user=current_user.id %>
-                  <%= link_to 'Edit', edit_user_path(@user), class: "btn btn-secondary" %>
+              
+              <% if user=current_user.id %>
+                    <%= link_to 'Edit', edit_user_path(@user.id), class: "btn btn-secondary" %>
               <%end%>
+              
               <h2 class="mt-3">New book</h2>
-                    <% if @book.errors.any? %>
-                      <%= @book.errors.count %>errors prohibited this obj from being saved:
+                    <% if book.errors.any? %>
+                      <%= book.errors.count %>errors prohibited this obj from being saved:
                           <ul>
-                            <% @book.errors.full_messages.each do |message| %>
+                            <% book.errors.full_messages.each do |message| %>
                               <li><%= message %></li>
                             <%end %>
                           </ul>
                     <% end %>
-                <%= form_with model: @book do |f| %>
+                <%= form_with model: book do |f| %>
                  <div class="form group">
                    <label for=book_title>Title</label>
                    <%= f.text_field :title %>
@@ -31,7 +33,7 @@
                    <%= f.text_area :body %>
                  </div>
                  <div class="form group">
-                   <%= link_to 'Create book', books_path ,class: "btn btn-success"%>
+                   <%= f.submit 'Create book', class: "btn btn-success"%>
                  </div>
                 <% end %>
         </div>
