--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -8,7 +8,7 @@
             <div class="row">
               <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
                 <h2>Editing Book</h2>
-                      <%= form_with model: @user do |f| %>
+                      <%= form_with model: @book, url:edit_book_path, do |f| %>
                         <div class="form group">
                           <label for="book_title">Title</label><br>
                           <%= f.text_field :title, autofocus: true, id:"book_title" %>
@@ -17,7 +17,7 @@
                           <label for="book_opinion">Opinion</label><br>
                           <%= f.text_area :body, autofocus: true %>
                         </div>
-                        <%= link_to 'Update Book', book_path,  class: "btn btn-success"%>
+                        <%= f.submit 'Update Book', class: "btn btn-success"%>
                       <% end %>
                       <%= link_to 'Show', book_path %>
                       <%= link_to 'Back', books_path %>
