--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -7,7 +7,7 @@
             <div class="container px-5 px-sm-0">
                 <div class="row">
                     <div class="col-md-3">
-                      <%= render 'list', books: @books %>
+                      <%= render 'list', books: @books, book: @book %>
                     </div>
                     <div class="col-md-8 offset-md-1">
                      <% @books.each do |book| %>
@@ -24,7 +24,7 @@
                            <tbody>
                              <tr>
                                <td></td>
-                               <td><%= link_to "book.title", book_path(@book) %></td>
+                               <td><%= link_to book.title, book_path(@user) %></td>
                                <td><%= book.body %></td>
                                <td colspan="3"></td>
                              </tr>
