--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,37 +3,34 @@
 <html class="fontawesome-i2svg-active fontawesome-i2svg-complete">
     <body>
         <main>
-            <p id="notice"></p>
+            <div>
+              <%= flash[:notice] %>
+            </div>
             <div class="container px-5 px-sm-0">
                 <div class="row">
                     <div class="col-md-3">
-                      <%= render 'list', books: @books %>
+                      <%= render 'list', book: @new_book, user: @user %>
                     </div>
                     <div class="col-md-8 offset-md-1">
-                     <% @books.each do |book| %>
                       <h2>Book detail</h2>
                          <table class="table table-hover table-inverse">
-                               <thead>
-                                 <tr>
-                                   <th></th>
-                                   <th>Title<br>
-                                   <th>Opinion</th>
-                                   <th colspan="3"></th>
-                                 </tr>
-                               </thead>
                                <tbody>
                                  <tr>
-                                   <td></td>
-                                   <td><%= link_to "book.title", book_path(@book) %></td>
-                                   <td><%= book.body %></td>
+                                   <td>
+                                       <%= link_to user_path do %>
+                                         <%= image_tag @user.get_profile_image(100,100)%><br>
+                                         <%= @user.name %>
+                                       <%end%>
+                                   </td>
+                                   <td><%= link_to @book.title, book_path %></td>
+                                   <td><%= @book.body %></td>
                                    <% if @user=current_user.id %>
                                     <td><%= link_to 'Edit', edit_book_path, class: "btn btn-sm btn-success" %></td>
-                                    <td><%= link_to 'Destroy', method: :delete, class: "btn btn-danger", "data-confirm" => "本当に消しますか？"%></td>
+                                    <td><%= link_to 'Destroy', books_path, method: :delete, class: "btn  btn-sm btn-danger", "data-confirm" => "本当に消しますか？"%></td>
                                    <%end%>
                                  </tr>
                                </tbody>
                          </table>
-                     <%end%>
                     </div>
                 </div>
             </div>
