--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -36,6 +36,7 @@
                             <%= f.submit "Sign up" %>
                           </div>
                         <%end%>
+                        <%= link_to "Log in", new_user_session_path %>
                     </div>
                 </div>
             </div>
