--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,37 +25,45 @@
                     <ul class="navbar-nav ml-auto">
                     <% if user_signed_in? %>
                         <li>
-                          <i class="fa-solid fa-house"></i>
-                          <%= link_to 'Home', user_path(current_user.id) %>
+                          <%= link_to  user_path(current_user.id), class: "nav-link text-light" do %>
+                            <i class="fa-solid fa-house"></i> Home
+                          <%end%>
                         </li>
                         <li>
-                          <i class="fa-solid fa-users"></i>
-                          <%= link_to 'Users', users_path %>    
+                          <%= link_to  users_path, class: "nav-link text-light" do %>
+                            <i class="fa-solid fa-users"></i> Users
+                          <%end%>
                         </li>
                         <li>
-                          <i class="fa-solid fa-book-open"></i>
-                          <%= link_to 'Books', books_path %>    
+                          <%= link_to  books_path, class: "nav-link text-light" do %>
+                            <i class="fa-solid fa-book-open"></i> Books
+                          <%end%>
                         </li>
                         <li>
-                          <i class="fa-solid fa-right-from-bracket"></i>
-                          <%= link_to "Log out", destroy_user_session_path, method: :delete %>
+                          <%= link_to  destroy_user_session_path, method: :delete, class: "nav-link text-light" do %>
+                            <i class="fa-solid fa-right-from-bracket"></i>Log out
+                          <%end%>
                         </li>
                     <% else %>
                         <li>
-                          <i class="fa-solid fa-house"></i>
-                          <%= link_to 'Home', new_user_session_path %>
+                          <%= link_to root_path, class: "nav-link text-light" do %>
+                            <i class="fa-solid fa-house"></i> Home
+                          <%end%>
                         </li>
                         <li>
-                          <i class="fa-solid fa-link"></i>
-                          <%= link_to 'About', about_path %>    
+                          <%= link_to  about_path, class: "nav-link text-light" do %>
+                            <i class="fa-solid fa-link"></i> About
+                          <%end%>
                         </li>
                         <li>
-                          <i class="fa-solid fa-user-plus"></i>
-                          <%= link_to "Sign up", new_user_registration_path %>
+                          <%= link_to  new_user_registration_path, class: "nav-link text-light" do %>
+                            <i class="fa-solid fa-user-plus"></i> Sign up
+                          <%end%>
                         </li>
                         <li>
-                          <i class="fa-solid fa-right-to-bracket"></i>
-                          <%= link_to "Log in", new_user_session_path %>
+                          <%= link_to  new_user_session_path, class: "nav-link text-light" do %>
+                            <i class="fa-solid fa-right-to-bracket"></i> Log in
+                          <%end%>
                         </li>
                     <% end %>
                     </ul>
