--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -8,7 +8,7 @@
             <div class="row">
               <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
                 <h2>User info</h2>
-                      <%= form_with model: @user do |f| %>
+                      <%= form_with model: @user,url:user_path(@user.id), method: :patch do |f| %>
                         <div class="form group">
                           <label for="inputName">Name</label><br>
                           <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
@@ -21,7 +21,7 @@
                           <label for="inputName">Introduction</label><br>
                           <%= f.text_area :name, autofocus: true, placeholder:"説明"%>
                         </div>
-                        <%= link_to 'Update User', user_path(@user.id),  class: "btn btn-secondary"%>
+                        <%= f.submit 'Update User', class: "btn btn-secondary"%>
                       <% end %>
               </div>
             </div>
