--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,14 +3,15 @@
 <html class="fontawesome-i2svg-active fontawesome-i2svg-complete">
     <body>
        <main>
-         <p id="notice"></p>
+            <div>
+              <%= flash[:notice] %>
+            </div>
             <div class="container px-5 px-sm-0">
               <div class="row">
                   <div class="col-md-3">
-                   <%= render 'books/list', books: @books %>
+                   <%= render 'books/list', books: @books, user: @user, book: @book %>
                   </div>
                   <div class="col-md-8 offset-md-1">
-                     <% @books.each do |book| %>
                       <h2>Books</h2>
                          <table class="table table-hover table-inverse">
                                <thead>
@@ -21,16 +22,17 @@
                                    <th colspan="3"></th>
                                  </tr>
                                </thead>
+                               <% @books.each do |book| %>
                                <tbody>
                                  <tr>
                                    <td></td>
-                                   <td><%= link_to "book.title", book_path(@book) %></td>
+                                   <td><%= link_to book.title, book_path %></td>
                                    <td><%= book.body %></td>
                                    <td colspan="3"></td>
                                  </tr>
                                </tbody>
+                               <%end%>
                          </table>
-                     <%end%>
                   </div>
               </div>
             </div>
