--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -11,7 +11,9 @@
               </table>
               
               <% if user=current_user.id %>
-                    <%= link_to 'Edit', edit_user_path(@user.id), class: "btn btn-secondary" %>
+                    <%= link_to edit_user_path(@user.id), class: "btn btn-putline-secondary btn-block" do %>
+                        <i class="fas fa-user-cog"></i>
+                    <%end%>
               <%end%>
               
               <h2 class="mt-3">New book</h2>
