--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,13 +6,11 @@
             <div class="container px-5 px-sm-0">
               <div class="row">
                   <div class="col-md-3">
-                   <%= render 'books/list', books: @books %>
+                   <%= render 'books/list', books: @books, user: @user, book: @book  %>
                   </div>
                   <div class="col-md-8 offset-md-1">
-                     <% @books.each do |book| %>
                       <h2>Users</h2>
-                        <% @users.each do |user| %>
-                         <table class="table">
+                        <table class="table">
                            <thead>
                              <tr>
                                <th>image<br>
@@ -20,16 +18,18 @@
                                <th colspan="3"></th>
                              </tr>
                            </thead>
-                           <tbody>
-                             <tr>
-                               <td><%= image_tag user.get_profile_image(80,80)%></td>
-                               <td><%= user.name %></td>
-                               <td><%= link_to 'Show', user_path(@user) %></td>
-                             </tr>
-                           </tbody>
-                         </table>
-                        <%end%>
-                     <%end%>
+                          <% @books.each do |book| %>
+                            <% @users.each do |user| %>
+                               <tbody>
+                                  <tr>
+                                   <td><%= image_tag user.get_profile_image(80,80)%></td>
+                                   <td><%= @user.name %></td>
+                                   <td><%= link_to 'Show', user_path(@user) %></td>
+                                  </tr>
+                               </tbody>
+                            <%end%>
+                          <%end%>
+                        </table>
                   </div>
               </div>
             </div>
