--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,7 @@
             <div class="container px-5 px-sm-0">
               <div class="row">
                   <div class="col-md-3">
-                   <%= render 'books/list', books: @books, user: @user, book: @book %>
+                   <%= render 'books/list', books: @books, user: @user, book: @book_new %>
                   </div>
                   <div class="col-md-8 offset-md-1">
                       <h2>Books</h2>
@@ -26,7 +26,7 @@
                                <tbody>
                                  <tr>
                                    <td></td>
-                                   <td><%= link_to book.title, book_path %></td>
+                                   <td><%= link_to book.title, book_path(book.id) %></td>
                                    <td><%= book.body %></td>
                                    <td colspan="3"></td>
                                  </tr>
