--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -14,6 +14,8 @@
                     <%= link_to edit_user_path(@user.id), class: "btn btn-putline-secondary btn-block" do %>
                         <i class="fas fa-user-cog"></i>
                     <%end%>
+              <%else%>
+                    <%= redirect_to user_path(current_user.id)%>
               <%end%>
               
               <h2 class="mt-3">New book</h2>
