--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -18,17 +18,15 @@
                                <th colspan="3"></th>
                              </tr>
                            </thead>
-                          <% @books.each do |book| %>
                             <% @users.each do |user| %>
                                <tbody>
                                   <tr>
                                    <td><%= image_tag user.get_profile_image(80,80)%></td>
-                                   <td><%= @user.name %></td>
-                                   <td><%= link_to 'Show', user_path(@user) %></td>
+                                   <td><%= user.name %></td>
+                                   <td><%= link_to 'Show', user_path(user.id) %></td>
                                   </tr>
                                </tbody>
                             <%end%>
-                          <%end%>
                         </table>
                   </div>
               </div>
