--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,7 +22,7 @@
                                    <th colspan="3"></th>
                                  </tr>
                                </thead>
-                               <% @books.each do |book| %>
+                               <% @user.books.each do |book| %>
                                <tbody>
                                  <tr>
                                    <td></td>
